# world-modeling

./: .gitignore  README.md  flake.nix  pyproject.toml
lightning/: data.py  main.py  model.py  stream.py  tokenizer.py
scripts/: data  weights
src/: alibi.py  checkpoint.py  config.py  data.py  input_pipeline.py  main.py  model.py  optimizer.py  preprocess.py  spinner.py  tokenizer.py  train.py  util.py  weights.py
